# inventory

./: pyproject.toml
src/: .env
src/inventory/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
src/inventory/fixtures/: categories.json
src/inventory/migrations/: 0001_initial.py  0002_category.py  0002_material_user_transaction.py  0003_predefined_categories.py  0004_item.py  0005_item_category.py  0006_item_unit_price.py
src/inventory/templates/inventory/: add_material.html  materials.html
src/stocks/: settings.py  urls.py
src/templates/: base.html
src/users/: forms.py  models.py  urls.py  views.py
src/users/migrations/: 0001_initial.py
src/users/templates/users/: profile.html
