[project]
name = "dj-inventory"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrewakiv",email = "danchyshy.andriy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.7,<6.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "django-crispy-forms (>=2.4,<3.0)",
    "crispy-bootstrap5 (>=2025.6,<2026.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
